--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <header>
+      <h1 class='header-title'>SmartHouseApp</h1>
+      <nav class='navigation'>
+        <ul class='header-list'>
+          <li><a href='/' class='header_item active'>Home</a></li>
+          <li><a href='info.html' class='header_item'>Info</a></li>
+        </ul>
+      </nav>
+    </header>
+  <main>
+    <div class='phone'>
+      <div class='heading'></div>
+      <div class='screen-1' style='display: none'>
+        <button class='app' type='button'>
+          <span class='app-logo'>H</span>
+          <span class='app-heading'>House</span>
+        </button>
+      </div>
+      <div class='screen-2'>
+        <form class='form'>
+          <label for="device-select">Choose a device:</label>
 
+          <select name="devices" id="device-select">
+            <option value="">Please add a device</option>
+            <option value="light">Light</option>
+            <option value="iron">Iron</option>
+            <option value="kettle">Kettle</option>
+            <option value="coffee">Coffee machine</option>
+          </select>
+        </form>
+      </div>
+      <div class='bottom-line'></div>
+    </div>
+  </main>
   </body>
 </html>
