--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,19 @@
       <nav class='navigation'>
         <ul class='header-list'>
           <li><a href='/' class='header_item active'>Home</a></li>
-          <li><a href='info.html' class='header_item'>Info</a></li>
         </ul>
       </nav>
     </header>
   <main>
     <div class='phone'>
       <div class='heading'></div>
-      <div class='screen-1' style='display: none'>
+      <div class='screen-1' >
         <button class='app' type='button'>
           <span class='app-logo'>H</span>
           <span class='app-heading'>House</span>
         </button>
       </div>
-      <div class='screen-2'>
+      <div class='screen-2 display'>
         <form class='form'>
           <label for="device-select">Choose a device:</label>
 
@@ -37,6 +36,7 @@
             <option value="kettle">Kettle</option>
             <option value="coffee">Coffee machine</option>
           </select>
+           <button type='submit'>Add</button>
         </form>
       </div>
       <div class='bottom-line'></div>
